Fix the spacing issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -728,26 +728,39 @@ footer img {
   .list-of-services section .more-content {
     margin-bottom: 1.5rem;
     text-align: center;
-    padding: 0;
     padding: 1.3rem 1rem;
     font-weight: 300;
     font-size: 1.3rem;
     width: 15.5rem;
-    height: 31.5vh;
-    list-style-type: none;
     border-radius: 7px;
     box-shadow: .15rem .15rem .15rem #5c5111;
+  }
+
+  .list-of-services {
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+    align-items: center;
+    padding: 1.5rem 0 4rem 0;
+  }
+  
+  .services-heading {
+    display: flex;
+  }
+  
+  article h3 {
+    font-weight: bold;
+    padding: .8rem 0 .5rem .1rem;
+    font-size: 1.7rem;
+    width: 60%;
   }
 
   .list-of-services section .less-wording {
     margin-bottom: 1.5rem;
     text-align: center;
-    padding: 0;
     padding: 1rem 1rem;
     font-weight: 300;
     width: 15.5rem;
-    height: 13.5vh;
-    list-style-type: none;
     border-radius: 7px;
     box-shadow: .15rem .15rem .15rem #5c5111;
     background-color: #f6f0e4;
